Increase height to avoid content from overflowing (mx_RoomHeader_name.height + mx_RoomHeader_topic.max-height)

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomHeader.scss
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomHeader.scss
@@ -22,7 +22,7 @@ limitations under the License.
 .mx_RoomHeader_wrapper {
     max-width: 960px;
     margin: auto;
-    height: 70px;
+    height: 73px;
     align-items: center;
     display: flex;
 }
